# kimisabe-subconscious

./: .gitignore  2026-03-09-195017.md  ARCHITECTURE-SUMMARY.md  ARCHITECTURE.md  DISCUSSION-POINTS.md  FIRST-REPORT.md  IMPLEMENTATION-PLAN.md  LICENSE  QUICKSTART.md  README.md  REALITY-CHECK.md  REFINED-PLAN.md  ROADMAP.md  Subconscious.af  UNIVERSAL-VISION.md  VISION-REFINED.md  pyproject.toml  stress_tests.py  test_integration.py
.claude/: napkin.md
docs/: architecture-visual.html
kimi_subconscious/: __init__.py  atomic.py  cli.py  daemon.py  git_committer.py  injector.py  letta_client.py  models.py  observability.py  parser.py  phoenix.py  retry.py  state.py
scripts/: com.kimisub.consolidate.plist  install-launchd.sh
