[project]
name = "kimi-subconscious"
version = "0.1.0"
description = "A subconscious for Kimi Code. A Letta agent watches your sessions, accumulates context, and whispers guidance back."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ivan Kornienko", email = "mrivankorniyenko@gmail.com"}
]
keywords = ["kimi", "letta", "memory", "subconscious", "agent", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "watchdog>=3.0",
    "httpx>=0.25",
    "platformdirs>=4.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
kimisub = "kimi_subconscious.cli:main"

[project.urls]
Homepage = "https://github.com/ikornienko/kimi-subconscious"
Repository = "https://github.com/ikornienko/kimi-subconscious"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
